Add description of recipe

--- a/recipes/black--eyed-pea-soup.html
+++ b/recipes/black--eyed-pea-soup.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Black-Eyed Pea Soup</h1>
+    <img src="https://www.allrecipes.com/thmb/r_iQ4J8FA5hROi8llbRTOw3R4Ro=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8672702-c37783b4172e4001b7495990a376c5b5.jpg" alt="Picture of black-eyed soup">
+    <h3>Description</h3>
+    <p>The perfect meal for cold or sick days. Soup that is made out of ground beef, sausage, and vegetables in a hearty broth.</p>
 </body>
 </html>
