Add ingredients to recipe

--- a/recipes/black--eyed-pea-soup.html
+++ b/recipes/black--eyed-pea-soup.html
@@ -9,5 +9,23 @@
     <img src="https://www.allrecipes.com/thmb/r_iQ4J8FA5hROi8llbRTOw3R4Ro=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8672702-c37783b4172e4001b7495990a376c5b5.jpg" alt="Picture of black-eyed soup">
     <h3>Description</h3>
     <p>The perfect meal for cold or sick days. Soup that is made out of ground beef, sausage, and vegetables in a hearty broth.</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>1 pound bulk pork sausage</li>
+            <li>1 pound ground beef</li>
+            <li>1 large onion, diced</li>
+            <li>4 cups water</li>
+            <li>3 (15 ounce) cans black-eyed peas, drained</li>
+            <li>1 (28 ounce) can diced tomatoes</li>
+            <li>1 (10 ounce) can diced tomatoes with green chile peppers, undrained</li>
+            <li>1 teaspoon Worcestershire sauce</li>
+            <li>3/4 teaspoon garlic salt</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1 (4 ounce) can chopped green chilies</li>
+            <li>4 teaspoons molasses</li>
+            <li>4 beef bouillon cubes</li>
+            <li>1/4 teaspoon ground black pepper</li>
+            <li>1/4 teaspoon ground cumin</li>
+        </ul>
 </body>
 </html>
