--- a/recipes/black--eyed-pea-soup.html
+++ b/recipes/black--eyed-pea-soup.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Black-Eyed Pea Soup</title>
-</head>
-<body>
-    <h1>Black-Eyed Pea Soup</h1>
-    <img src="https://www.allrecipes.com/thmb/r_iQ4J8FA5hROi8llbRTOw3R4Ro=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8672702-c37783b4172e4001b7495990a376c5b5.jpg" alt="Picture of black-eyed soup">
-    <h3>Description</h3>
-    <p>The perfect meal for cold or sick days. Soup that is made out of ground beef, sausage, and vegetables in a hearty broth.</p>
-    <h3>Ingredients</h3>
-        <ul>
-            <li>1 pound bulk pork sausage</li>
-            <li>1 pound ground beef</li>
-            <li>1 large onion, diced</li>
-            <li>4 cups water</li>
-            <li>3 (15 ounce) cans black-eyed peas, drained</li>
-            <li>1 (28 ounce) can diced tomatoes</li>
-            <li>1 (10 ounce) can diced tomatoes with green chile peppers, undrained</li>
-            <li>1 teaspoon Worcestershire sauce</li>
-            <li>3/4 teaspoon garlic salt</li>
-            <li>1/2 teaspoon salt</li>
-            <li>1 (4 ounce) can chopped green chilies</li>
-            <li>4 teaspoons molasses</li>
-            <li>4 beef bouillon cubes</li>
-            <li>1/4 teaspoon ground black pepper</li>
-            <li>1/4 teaspoon ground cumin</li>
-        </ul>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Black-Eyed Pea Soup</title>
+    </head>
+
+    <body>
+        <h1>Black-Eyed Pea Soup</h1>
+            <img src="https://www.allrecipes.com/thmb/r_iQ4J8FA5hROi8llbRTOw3R4Ro=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8672702-c37783b4172e4001b7495990a376c5b5.jpg" alt="Picture of black-eyed soup">
+        <h3>Description</h3>
+            <p>The perfect meal for cold or sick days. Soup that is made out of ground beef, sausage, and vegetables in a hearty broth.</p>
+        <h3>Ingredients</h3>
+            <ul>
+                <li>1 pound bulk pork sausage</li>
+                <li>1 pound ground beef</li>
+                <li>1 large onion, diced</li>
+                <li>4 cups water</li>
+                <li>3 (15 ounce) cans black-eyed peas, drained</li>
+                <li>1 (28 ounce) can diced tomatoes</li>
+                <li>1 (10 ounce) can diced tomatoes with green chile peppers, undrained</li>
+                <li>1 teaspoon Worcestershire sauce</li>
+                <li>3/4 teaspoon garlic salt</li>
+                <li>1/2 teaspoon salt</li>
+                <li>1 (4 ounce) can chopped green chilies</li>
+                <li>4 teaspoons molasses</li>
+                <li>4 beef bouillon cubes</li>
+                <li>1/4 teaspoon ground black pepper</li>
+                <li>1/4 teaspoon ground cumin</li>
+            </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>In a large Dutch oven, cook and stir the pork sausage and ground beef with the onion over medium heat until the meat is no longer pink, 10 to 12 minutes; drain off excess fat. Pour in the water, and stir in black-eyed peas, diced tomatoes, tomatoes with green chiles, Worcestershire sauce, garlic salt, salt, canned green chilies, molasses, beef bouillon cubes, black pepper, and cumin until thoroughly mixed.</li>
+                <li>Bring the soup to a boil, reduce heat to a simmer, cover, and simmer for 45 minutes.</li>
+            </ol>
+    </body>
 </html>
