Add links to recipes, change indentation

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Odin Recipes</title>
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <a href="black--eyed-pea-soup.html">Black-Eyed Pea Soup</a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Odin Recipes</title>
+    </head>
+
+    <body>
+        <h1>Odin Recipes</h1>
+            <a href="black--eyed-pea-soup.html">Black-Eyed Pea Soup</a>
+            <a href="cotechino-con-lenticchie.html">Cotechino Con Lenticchie</a>
+            <a href="greek-new-years-cake.html">Greek New Year's Cake</a>
+    </body>
 </html>
