Add description of recipe

--- a/recipes/cotechino-con-lenticchie.html
+++ b/recipes/cotechino-con-lenticchie.html
@@ -7,5 +7,8 @@
 
     <body>
         <h1>Cotechino Con Lenticchie</h1>
+            <img src="https://www.allrecipes.com/thmb/wXfP9TdAWi-NvBCdG6YM4D55u-M=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4406235-ab19fceb444746dda86e82a574c43c44.jpg" alt="Picture of cotechino con lenticchie">
+        <h3>Description</h3>
+            <p>An italian dish that is eaten on New Year's as part of tradition. Translates to pork sausage with lentils. Tastes best when cotechino is fresh and flavored with nutmeg, but cloves and pepper are good as well.</p>
     </body>
 </html>
