--- a/recipes/greek-new-years-cake.html
+++ b/recipes/greek-new-years-cake.html
@@ -7,5 +7,8 @@
 
     <body>
         <h1>Greek New Year's Cake</h1>
+            <img src="https://www.allrecipes.com/thmb/dY4Vb4k9VpbAf_Y1Wyp1-4TZbd4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6205979-a33320ecd86d451ab2e61ad1574ac771.jpg" alt="Picture of greek new year's cake">
+        <h3>Description</h3>
+            <p>A greek cake traditionally eaten on New Year's Eve. A coin is placed inside prior to cooking, and whoever ends up with it gets 1 year of good luck!</p>
     </body>
 </html>
