Change link to correct html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h1>Odin Recipes</h1>
             <a href="black--eyed-pea-soup.html">Black-Eyed Pea Soup</a>
             <a href="cotechino-con-lenticchie.html">Cotechino Con Lenticchie</a>
-            <a href="greek-new-years-cake.html">Greek New Year's Cake</a>
+            <a href="Vaselopita.html">Vaselopita</a>
     </body>
 </html>
