Add ingredients of recipe

--- a/recipes/Vaselopita.html
+++ b/recipes/Vaselopita.html
@@ -10,5 +10,18 @@
             <img src="https://www.allrecipes.com/thmb/dY4Vb4k9VpbAf_Y1Wyp1-4TZbd4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6205979-a33320ecd86d451ab2e61ad1574ac771.jpg" alt="Picture of vaselopita">
         <h3>Description</h3>
             <p>A greek cake traditionally eaten on New Year's Eve. A coin is placed inside prior to cooking, and whoever ends up with it gets 1 year of good luck!</p>
+        <h3>Ingredients</h3>
+            <ul>
+                <li>1 cup butter</li>
+                <li>2 cups white sugar</li>
+                <li>3 cups all-purpose flour</li>
+                <li>6 eggs</li>
+                <li>2 teaspoons baking powder</li>
+                <li>1 cup warm milk (110 degrees F/45 degrees C)</li>
+                <li>1/2 teaspoon baking soda</li>
+                <li>1 tablespoon fresh lemon juice</li>
+                <li>1/4 cup blanched slivered almonds</li>
+                <li>2 tablespoons white sugar</li>
+            </ul>
     </body>
 </html>
