--- a/recipes/cotechino-con-lenticchie.html
+++ b/recipes/cotechino-con-lenticchie.html
@@ -28,5 +28,11 @@
                 <li>1 tablespoon olive oil</li>
                 <li>1 bunch fresh parsley, chopped</li>
             </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>Pierce the cotechino with a fork in several places. In a large pot place the cotechino, chopped onion, 1 bay leaf, peppercorns and thyme. Cover with water and bring all to a boil. Reduce heat to low and let simmer for 45 to 50 minutes, if using fresh cotechino (for precooked cotechino, simmer for 20 minutes).</li>
+                <li>In a large pot combine the lentils, quartered onion, garlic, bay leaf, carrot and salt and pepper to taste. Cover with the 4 cups of water. Bring all to a boil; cover, reduce heat to low and let simmer for 40 to 45 minutes or until lentils are soft. Add additional water if necessary.</li>
+                <li>Remove the onion, garlic, bay leaf and carrot; discard. Spoon the lentils into a serving dish, drizzle with olive oil and slice rounds of the cotechino over the top. Sprinkle with fresh chopped parsley and serve.</li>
+            </ol>
     </body>
 </html>
