--- a/recipes/Vaselopita.html
+++ b/recipes/Vaselopita.html
@@ -9,7 +9,7 @@
         <h1>Vaselopita</h1>
             <img src="https://www.allrecipes.com/thmb/dY4Vb4k9VpbAf_Y1Wyp1-4TZbd4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6205979-a33320ecd86d451ab2e61ad1574ac771.jpg" alt="Picture of vaselopita">
         <h3>Description</h3>
-            <p>A greek cake traditionally eaten on New Year's Eve. A coin is placed inside prior to cooking, and whoever ends up with it gets 1 year of good luck!</p>
+            <p>Traditional Greek New Years Day bread. Served as a coffee cake for breakfast. Also the person who receives the quarter inside gets good luck for 1 year!</p>
         <h3>Ingredients</h3>
             <ul>
                 <li>1 cup butter</li>
