--- a/recipes/black--eyed-pea-soup.html
+++ b/recipes/black--eyed-pea-soup.html
@@ -9,7 +9,7 @@
         <h1>Black-Eyed Pea Soup</h1>
             <img src="https://www.allrecipes.com/thmb/r_iQ4J8FA5hROi8llbRTOw3R4Ro=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8672702-c37783b4172e4001b7495990a376c5b5.jpg" alt="Picture of black-eyed pea soup">
         <h3>Description</h3>
-            <p>The perfect meal for cold or sick days. Soup that is made out of ground beef, sausage, and vegetables in a hearty broth.</p>
+            <p>This is a great New Year's meal! Perfect on a cold winter night. Great comfort food. Serve with corn bread.</p>
         <h3>Ingredients</h3>
             <ul>
                 <li>1 pound bulk pork sausage</li>
