Group links as unordered list

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-            <a href="black--eyed-pea-soup.html">Black-Eyed Pea Soup</a>
-            <a href="cotechino-con-lenticchie.html">Cotechino Con Lenticchie</a>
-            <a href="Vaselopita.html">Vaselopita</a>
+            <ul>
+                <li><a href="black--eyed-pea-soup.html">Black-Eyed Pea Soup</a></li>
+                <li><a href="cotechino-con-lenticchie.html">Cotechino Con Lenticchie</a></li>
+                <li><a href="Vaselopita.html">Vaselopita</a></li>
+            </ul>
     </body>
 </html>
