--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
             <ul>
-                <li><a href="black--eyed-pea-soup.html">Black-Eyed Pea Soup</a></li>
-                <li><a href="cotechino-con-lenticchie.html">Cotechino Con Lenticchie</a></li>
-                <li><a href="Vaselopita.html">Vaselopita</a></li>
+                <li><a href="recipes/black--eyed-pea-soup.html">Black-Eyed Pea Soup</a></li>
+                <li><a href="recipes/cotechino-con-lenticchie.html">Cotechino Con Lenticchie</a></li>
+                <li><a href="recipes/Vaselopita.html">Vaselopita</a></li>
             </ul>
     </body>
 </html>
