--- a/recipes/cotechino-con-lenticchie.html
+++ b/recipes/cotechino-con-lenticchie.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Cotechino Con Lenticchie</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
